# py.guanjihuan.com

./: API Reference.md  API_Reference.py  API_reference.md  API_reference.py  GJH_source_code.py  README.md  tutorial.py
API_Reference/: API_Reference.py
PyPI/: README.md  setup.cfg
PyPI/src/gjh/: __init__.py
PyPI/src/guan/: AI_chat.py  Fourier_transform.py  Green_functions.py  Hamiltonian_of_examples.py  Hamiltonian_of_finite_size.py  Hamiltonian_of_finite_size_systems.py  Hamiltonian_of_models_in_reciprocal_space.py  Hamiltonian_of_models_in_the_reciprocal_space.py  __init__.py  audio.py  band_structures_and_wave_functions.py  basic_functions.py  calculate_Chern_number.py  calculate_Green_functions.py  calculate_Wilson_loop.py  calculate_band_structures.py  calculate_band_structures_and_wave_functions.py  calculate_conductance.py  calculate_density_of_states.py  calculate_reciprocal_lattice_vectors.py  calculate_scattering_matrix.py  calculate_topological_invariant.py  calculate_wave_functions.py  custom_classes.py  data_processing.py  decorator.py  decorators.py  density_of_states.py  deprecated.py  download.py  figure_plotting.py  file_processing.py  file_reading_and_writing.py  find_vector_with_the_same_gauge.py  functions_using_objects_of_custom_classes.py  machine_learning.py  others.py  plot_figures.py  quantum_transport.py  read_and_write.py  (+2 more)
PyPI/src/guan.egg-info/: PKG-INFO  SOURCES.txt
Tutorial/: 01_test_and_Pauli_matrix.py  02_Fourier_transform_and_calculate_band_structures.py  02_Fourier_transform_and_calculate_band_structures.py.py  03_Hamiltonian_of_finite_size_systems.py  04_some_models_in_the_reciprocal_space.py  05_calculate_density_of_states.py  06_calculate_conductance_and_scattering_matrix.py  07_calculate_Chern_number_and_Wilson_loop.py  08_read_and_write.py  0_test.py  (+30 more)
(+11 files in other folders)
