[metadata]
# replace with your username:
name = guan
version = 0.0.85
author = guanjihuan
author_email = guanjihuan@163.com
description = Guan is an open-source python package developed and maintained by https://www.guanjihuan.com/about. The primary location of this package is on website https://py.guanjihuan.com. With this package, you can calculate band structures, density of states, quantum transport and topological invariant of tight-binding models by invoking the functions you need. Other frequently used functions are also integrated in this package, such as file reading/writing, figure plotting, data processing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://py.guanjihuan.com
project_urls =
    Bug Tracker = https://py.guanjihuan.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src