[metadata]
# replace with your username:
name = guan
version = 0.0.134
author = guanjihuan
author_email = guanjihuan@163.com
description = An open source python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://py.guanjihuan.com
project_urls =
    Bug Tracker = https://py.guanjihuan.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src